# Action4Pose_FG2017

./: .gitmodules  License  README.md
cache/: Penn_Action_Demo_m1_c24_w0.1X_t20_stIdx000000_endIdx000040.txt
cpp/body_pose/: SConscript~  body_part_sample.hpp  body_part_sample_cnn.hpp  body_pose_types.hpp  body_sample.cpp  body_sample.hpp  common.hpp  nbest_body_pose_utils.cpp  nbest_body_pose_utils.hpp  performance_metrics.cpp  performance_metrics.h  utils.cpp~  utils.hpp
cpp/body_pose/clustering/: cluster_tool.cpp  clustering_features.cpp~
cpp/body_pose/features/: cluster_eval.cpp  common.hpp  feature_clustering.cpp  feature_sample.cpp  feature_sample.hpp  hog_clustering.cpp  patch_mining.cpp  train_lda_hog_main.cpp
cpp/body_pose/test_data/: config.txt~  config_body_detection.txt  config_class_fp.txt  config_cond_regress_jhmdb.txt  config_cond_regress_jhmdb.txt~  config_cond_regress_pennaction.txt  config_cond_regress_pennaction.txt~  config_ind_regress_LSP.txt  config_ind_regress_MPII_Human_Pose.txt  config_ind_regress_fp.txt  config_ind_regress_humaneva.txt  config_ind_regress_humaneva.txt~
cpp/fashion/: attribute_extractor_main.cpp  bow_extractor_main.cpp  create_libsvm_features.cpp  create_segmented_obj_voc.cpp  preprocess_image_main.cpp
cpp/fashion/base/: array.cpp  array.hpp  config.hpp
cpp/fashion/skin/: SkinColorModelGaussian.cc
cpp/learning/common/: data_set.cpp  data_set.hpp  image_sample.hpp  roc_graphs.cpp  roc_graphs.hpp  sample_patches.cpp  sample_patches.hpp
cpp/learning/forest/: #sample.hpp#  forest.hpp  param.hpp  simple_split.hpp  tree.hpp  votmap_max_coords.cpp  votmap_max_coords.hpp
cpp/learning/forest/utils/: eval_utils.hpp  eval_utils.tpp
cpp/learning/pictorial_structure/: learn_model_parameter.cpp~  learn_model_parameter.hpp  nbest_inferenz.cpp  nbest_inferenz.hpp  pair_inferenz.cpp  pair_inferenz.hpp  part.hpp  utils.cpp
cpp/utils/: armadillo.hpp  net_utils.cpp  net_utils.hpp  stl_utils.cpp  stl_utils.hpp  vl_kmean.cpp  vl_kmean.hpp
cpp/utils/data_structure/: dereferencing_iterator.hpp  dereferencing_vector.hpp
cpp/utils/libsvm/: convert_liblinear_model_main.cpp  liblinear_predict_main.cpp
cpp/utils/libsvm/test/: liblinear_test.cpp
cpp/utils/pyramid_stitcher/: Rectangle.cpp  Rectangle.h  image_pyramid.cpp  image_pyramid.hpp  patchwork.cpp  patchwork.hpp  pyramid_stitcher.cpp  pyramid_stitcher.hpp
cpp/utils/serialization/test/: opencv_serialization_test.cpp  test_serialization.cpp
cpp/utils/statsd/: client.cpp  client.hpp  test_statsd.cpp  timer.cpp  timer.hpp
cpp/utils/test/: test_armadillo.cpp  test_kmean.cpp
cpp/utils/tools/: image_iterator_main.cpp  merge_images.cpp
cpp/vision/: geometry_utils.cpp  geometry_utils.hpp  image_transform.cpp  image_transform.hpp  opencv_utils.cpp  opencv_utils.hpp  optical_flow_utils.cpp  optical_flow_utils.hpp  unstitch.cpp  unstitch.hpp
cpp/vision/detector/: hog_svm.cpp  hog_svm.hpp  test.cpp
cpp/vision/features/: extractor_factory.hpp  hog_visualizer.cpp  hog_visualizer.hpp  simple_feature.cpp  simple_feature.hpp
cpp/vision/features/cnn/: caffe_utils.cpp  caffe_utils.hpp~  cnn_features.cpp  cnn_features.hpp
cpp/vision/features/feature_channels/: #hog_extractor.cpp#
cpp/vision/features/global/: color_hist.cpp  color_hist.hpp  color_test.cpp
cpp/vision/features/low_level/: #surf.cpp#
cpp/vision/features/test/: bow_extractor_test.cpp  bow_histogram_test.cpp  gist_test.cpp  low_level_features_test.cpp  patch.fhog  patch_hog.pgm
cpp/vision/segmentation/: fashion_segmentation.cpp  fashion_segmentation.hpp  region_growing.hpp  segmentation_param.proto
data/: get_models.sh
data/action_probs/Penn_Action/: action_probs.txt
data/app_sharing_weights/Penn_Action/: class_0.txt  class_1.txt  class_10.txt  class_11.txt  class_12.txt  class_13.txt  class_2.txt  class_3.txt  class_4.txt  class_5.txt  class_6.txt  class_7.txt  class_8.txt  class_9.txt
data/models/vgg-16/: VGG_ILSVRC_16_layers_deploy.prototxt_trunc_pennaction_test_512.txt
demo_PennAction/: CMakeLists.txt  config_file.txt  demo_PennAction.cpp
demo_PennAction/cmake/Modules/: FindConfig++.cmake  FindConfig++.cmake~
